# slackclient_log_handler

./: README.rst  pyproject.toml
slackclient_log_handler/: __init__.py
