[tool.poetry]
name = "slackclient_log_handler"
version = "0.1.2"
description = "Posts log events to Slack via API"
authors = ["Ji-Ho Lee <search5@gmail.com>"]
readme = "README.rst"
packages = [{include = "slackclient_log_handler"}]
keywords = ["slack", "logging"]
license = "Apache-2.0"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
    'Topic :: Office/Business :: Groupware',
]
repository = "https://github.com/search5/slackclient_log_handler"

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.26.1"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
